volexc/tests/ui/mapkey_struct_with_float.go.out
Error: invalid map key type: floats cannot be used as map keys
    ╭─[ mapkey_struct_with_float.vol:7:12 ]
    │
  7 │     value: f64;
    │            ─┬─  
    │             ╰─── floating-point type used here
    │ 
 11 │     data: {Key:string};
    │            ─┬─  
    │             ╰─── struct 'Key' contains invalid field
────╯