volexc/tests/ui/mapkey_struct_with_float.vol
// rust:fail
// go:fail
// typescript:fail
// Struct containing float is invalid as map key in all languages
struct Key {
    id: u32;
    value: f64;
}

struct Test {
    data: {Key:string};
}
